syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.linkfast.demogrpc.grpc.user";
option java_outer_classname = "UserGrpcProto";

package user;

service UserService {
    rpc CreateUser (UserRq) returns (UserRs) {}
    rpc UpdateUser (UserUpdateRq) returns (UserRs) {}
    rpc DeleteUser (DeleteUserRq) returns (DeleteUserRs) {}
    rpc GetAllUser (EmptyRq) returns (ListUsersResponse) {}
}

message UserRq {
    string name = 2;
    string nickName = 3;
    string address = 4;
    int32 age = 5;
    bool active = 6;
    string sex = 7;
}

message UserRs {
    string id = 1;
    string name = 2;
    string nickName = 3;
    string address = 4;
    int32 age = 5;
    bool active = 6;
    string sex = 7;
}

message UserUpdateRq {
    string id = 1;
    string name = 2;
    string nickName = 3;
    string address = 4;
    int32 age = 5;
    bool active = 6;
    string sex = 7;
}

message DeleteUserRq {
    string id = 1;
}

message DeleteUserRs {
    bool complete = 1;
}

message EmptyRq {

}

message ListUsersResponse {
    repeated UserRs users = 1;
}